# wikipedia_dump

./: README.md  improved code suggested from chatGPT.ipynb  improved code suggested from chatGPT.py  pyproject.toml  read_wikipedia.ipynb  real_wikipedia.py  scarping Category.ipynb
data/: categories-7hrs-breadth-serach-20-04-23..json  categories-7hrs-breadth-serach-20-04-23.csv
