[tool.poetry]
name = "wikipedia-dump"
version = "0.1.0"
description = ""
authors = ["Hoss Kord <hkordbacheh@gmail.com>"]
readme = "README.md"
packages = [{include = "wikipedia_dump"}]

[tool.poetry.dependencies]
python = ">=3.9"
ipykernel = "^6.22.0"
elem = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
